<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Intro">

    <TextView
        android:id="@+id/tv_app_name_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="TRELLO "
        android:textColor="@color/teal_200"
        android:textSize="70sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_task_image" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/let_s_get_started_text"
        android:textColor="@color/dark_Grey"
        android:textSize="15sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/intro_text_description"
        android:textColor="@color/teal_700"
        android:textSize= "15sp"/>
    <Button
        android:id="@+id/btn_sign_in_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="6dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="6dp"
        android:background="@drawable/shape_button"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:fontFamily="@font/aclonica"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_sign_up_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="6dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="6dp"
        android:background="@drawable/white_signup"
        android:fontFamily="@font/aclonica"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/sign_up"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="15sp" />




</LinearLayout>